--- a/project/authorization_code/public/css/style.css
+++ b/project/authorization_code/public/css/style.css
@@ -398,14 +398,35 @@
 		opacity: 1.0;
 	}
 
-	.jsonResponse {
-		-webkit-column-count: 2; /* Chrome, Safari, Opera */
+	.jsonResponse_artist {
+		/*-webkit-column-count: 2; 
 	    column-count: 2;
-	    -webkit-column-gap: 40px; /* Chrome, Safari, Opera */
+	    -webkit-column-gap: 40px; 
 	    column-gap: 40px;
-	    -webkit-column-rule-style: solid; /* Chrome, Safari, Opera */
-	    column-rule-style: solid;
+	    -webkit-column-rule-style: solid; 
+	    column-rule-style: solid;*/
+
+        /*float:left;
+        width:46%;
+        position:relative;
+        left:52%;
+        overflow:hidden;*/
 	}
+
+    .jsonResponse_tracks {
+        /*-webkit-column-count: 2; 
+        column-count: 2;
+        -webkit-column-gap: 40px; 
+        column-gap: 40px;
+        -webkit-column-rule-style: solid; 
+        column-rule-style: solid;*/
+
+        /*float:left;
+        width:46%;
+        position:relative;
+        left:56%;
+        overflow:hidden;*/
+    }
 
 	.login_button {
 		margin-bottom: 50px;
