--- a/project/authorization_code/public/css/style.css
+++ b/project/authorization_code/public/css/style.css
@@ -413,6 +413,16 @@
         overflow:hidden;*/
 	}
 
+	.jsonResponse {
+		-webkit-column-count: 2; /* Chrome, Safari, Opera */
+	    column-count: 2;
+	    -webkit-column-gap: 40px; /* Chrome, Safari, Opera */
+	    column-gap: 40px;
+	    -webkit-column-rule-style: solid; /* Chrome, Safari, Opera */
+	    column-rule-style: solid;
+	}
+
+
     .jsonResponse_tracks {
         /*-webkit-column-count: 2; 
         column-count: 2;
