--- a/project/authorization_code/public/css/style.css
+++ b/project/authorization_code/public/css/style.css
@@ -472,49 +472,13 @@
         padding: 0 10px;
 	}
 
-    .popup {
-        position: relative;
-        display: inline-block;
-        cursor: pointer;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-    }
-
-    /* The actual popup */
-    .popup .popuptext {
-        visibility: hidden;
-        width: 160px;
-        background-color: #555;
-        color: #fff;
-        text-align: center;
-        border-radius: 6px;
-        padding: 8px 0;
-        position: absolute;
-        z-index: 1;
-        bottom: 125%;
-        left: 50%;
-        margin-left: -80px;
-    }
-
-    /* Popup arrow */
-    .popup .popuptext::after {
-        content: "";
-        position: absolute;
-        top: 100%;
-        left: 50%;
-        margin-left: -5px;
-        border-width: 5px;
-        border-style: solid;
-        border-color: #555 transparent transparent transparent;
-    }
-
-    /* Toggle this class - hide and show the popup */
-    .popup .show {
-        visibility: visible;
-        -webkit-animation: fadeIn 1s;
-        animation: fadeIn 1s;
+    #recentSearches {
+    	-webkit-column-count: 3; /* Chrome, Safari, Opera */
+	    column-count: 3;
+	    -webkit-column-gap: 10px; /* Chrome, Safari, Opera */
+	    column-gap: 10px;
+	    -webkit-column-rule-style: solid; /* Chrome, Safari, Opera */
+	    column-rule-style: solid;
     }
 
 /* Add animation (fade in the popup) */
