--- a/project/authorization_code/public/css/similar-style.css
+++ b/project/authorization_code/public/css/similar-style.css
@@ -22,6 +22,153 @@
         text-align: center;
     }
 
+    h1, h2, h3, h4, h5, h6 {
+        font-weight: 300;
+        line-height: 1em;
+        margin: 0 0 1em 0;
+    }
+
+        h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
+            color: inherit;
+            text-decoration: none;
+        }
+
+    header p {
+        position: relative;
+        margin: 0 0 1.5em 0;
+    }
+
+    header h2 + p {
+        font-size: 1.25em;
+        margin-top: -1em;
+        line-height: 1.5em;
+    }
+
+    header h3 + p {
+        font-size: 1.1em;
+        margin-top: -0.8em;
+        line-height: 1.5em;
+    }
+
+    header h4 + p,
+    header h5 + p,
+    header h6 + p {
+        font-size: 0.9em;
+        margin-top: -0.6em;
+        line-height: 1.5em;
+    }
+
+    header.major {
+        text-align: center;
+        margin-bottom: 3em;
+    }
+
+        header.major h2 {
+            font-size: 3em;
+        }
+
+        header.major p {
+            border-top: medium double rgba(144, 144, 144, 0.25);
+            display: inline-block;
+            padding: 2em 2em 0 2em;
+        }
+
+    /* Header */
+
+    body.landing #header {
+        background-color: transparent;
+        left: 0;
+        position: absolute;
+        top: 0;
+    }
+
+    #header {
+        cursor: default;
+        height: 4.75em;
+        line-height: 4.75em;
+        width: 100%;
+        z-index: 10000;
+    }
+
+        #header h1 {
+            color: #ffffff;
+            height: inherit;
+            left: 2.5em;
+            line-height: inherit;
+            margin: 0;
+            padding: 0;
+            position: absolute;
+            top: 0;
+        }
+
+            #header h1 a {
+                font-size: 1.25em;
+            }
+
+        #header nav {
+            height: inherit;
+            line-height: inherit;
+            position: absolute;
+            right: 2.75em;
+            top: 0;
+            vertical-align: middle;
+        }
+
+            #header nav > ul {
+                list-style: none;
+                margin: 0;
+                padding-left: 0;
+            }
+
+                #header nav > ul > li {
+                    border-radius: 4px;
+                    display: inline-block;
+                    margin-left: 1.5em;
+                    padding-left: 0;
+                }
+
+                    #header nav > ul > li a {
+                        -moz-transition: color 0.2s ease-in-out;
+                        -webkit-transition: color 0.2s ease-in-out;
+                        -o-transition: color 0.2s ease-in-out;
+                        -ms-transition: color 0.2s ease-in-out;
+                        transition: color 0.2s ease-in-out;
+                        color: #cee8d8;
+                        display: inline-block;
+                        text-decoration: none;
+                    }
+
+                        #header nav > ul > li a:hover {
+                            color: #ffffff;
+                        }
+
+                    #header nav > ul > li:first-child {
+                        margin-left: 0;
+                    }
+
+                    #header nav > ul > li .button {
+                        height: 2.25em;
+                        line-height: 2.25em;
+                        margin-bottom: 0;
+                        padding: 0 1em;
+                        position: relative;
+                        top: -0.075em;
+                        vertical-align: middle;
+                    }
+
+        #header .container {
+            position: relative;
+        }
+
+            #header .container h1 {
+                left: 0;
+            }
+
+            #header .container nav {
+                right: 0;
+            }
+
+
     th, td {
         padding: 15px;
     }
